--- a/ps_spec.yaml
+++ b/ps_spec.yaml
@@ -649,10 +649,10 @@ components:
       type: object
       description: describes consent status
       properties:
-        ConsentID:
+        clientConsentID:
             type: string
             required: true
-            description: Unique identifier of the consent
+            description: Unique identifier of the consent in the domain of the client
             example: client_id.userID.123456
         Approved:
             type: boolean
