--- a/ps_spec.yaml
+++ b/ps_spec.yaml
@@ -465,11 +465,11 @@ paths:
           required: true
           description: Bearer JWT Access Token - acquired through the token endpoint
         - in: body
-          name: divorceCalculationRequestbody
+          name: scheidingBerekeningVerzoekbody
           required: true
           schema:          
              type: object
-             $ref: '#/components/schemas/divorceCalculationRequestbody'
+             $ref: '#/components/schemas/scheidingBerekeningVerzoekbody'
       responses:
         '200':
           description: OK - Successful request
@@ -481,7 +481,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/divorceResponse' 
+                $ref: '#/components/schemas/scheidingResponse' 
         '400':
           description: Bad request 
           content:
@@ -928,14 +928,14 @@ components:
           description: official enddate of the relation if applicable, e.g. divorce date or legal separation (scheiding tafel en bed).
           example: 2023-08-22
 
-    divorceCalculationRequestbody:
+    scheidingBerekeningVerzoekbody:
       type: object
       properties:
-        divorceCalculationRequest:
-            $ref: '#/components/schemas/divorceCalculationRequest'
+        scheidingBerekeningVerzoek:
+            $ref: '#/components/schemas/scheidingBerekeningVerzoek'
         serverConsentID:
             $ref: '#/components/schemas/serverConsentID'
-    divorceCalculationRequest:
+    scheidingBerekeningVerzoek:
       type: object
       properties:
         bsn:
@@ -961,26 +961,26 @@ components:
            description: Indicates whether partner is accepting their allocated 'Bijzonder Partner Pensioen' (BPP) if applicable. True indicates that partner accepts the allocated BPP, which then needs to be considered in conversion calculations. False indicates partner is declining their BPP allocation.
            example: true
 
-    divorceResponse:
+    scheidingResponse:
         type: object
         properties:
-          divorceCalculationRequest:
-            $ref: '#/components/schemas/divorceCalculationRequest'
+          scheidingBerekeningVerzoek:
+            $ref: '#/components/schemas/scheidingBerekeningVerzoek'
           serverConsentID:
             $ref: '#/components/schemas/serverConsentID'
-          divorceCalculationResult:
-            $ref: '#/components/schemas/divorceCalculationResult'
-    divorceCalculationResult:
+          scheidingBerekeningResultaat:
+            $ref: '#/components/schemas/scheidingBerekeningResultaat'
+    scheidingBerekeningResultaat:
         type: object
         properties:
           pensioenRegeling:
             $ref: '#/components/schemas/pensioenRegeling'
           aanspraakOuderdomspensioen:
-            $ref: '#/components/schemas/entitlementOldAge'
+            $ref: '#/components/schemas/aanspraakOuderdomspensioen'
           aanspraakOuderdomspensioenPartner:
-            $ref: '#/components/schemas/entitlementOldAgePartner'
+            $ref: '#/components/schemas/aanspraakOuderdomspensioenPartner'
           aansprakBijzonderPartnerPensioen:
-            $ref: '#/components/schemas/entitlementBijzonderPartnerPensioen'
+            $ref: '#/components/schemas/aanspraakBijzonderPartnerPensioen'
     pensioenRegeling:
       type: object
       properties:
@@ -992,7 +992,7 @@ components:
           type: string
           description: duration of pension agreement. Can be 'tijdelijk' or 'levenslang'
           example: levenslang
-    entitlementOldAge:
+    aanspraakOuderdomspensioen:
       type: object
       properties:
         maandelijkse_aanspraak_voor:
@@ -1007,7 +1007,7 @@ components:
           type: string
           description: Indicates whether resulting entitlement exceeds legal minimum for commutation of pension. Entitlements falling below the commutation limit cannot be divided. Must be either 'success' (commutation limit is met) or 'failed' (commutation limit is not met).
           example: Success
-    entitlementOldAgePartner:
+    aanspraakOuderdomspensioenPartner:
       type: object
       properties:
         maandelijkse_aanspraak_voor:
@@ -1022,7 +1022,7 @@ components:
           type: string
           description: Indicates whether resulting entitlement exceeds legal minimum for commutation of pension. Entitlements falling below the commutation limit cannot be divided. Must be either 'success' (commutation limit is met) or 'failed' (commutation limit is not met).
           example: Success
-    entitlementBijzonderPartnerPensioen:
+    aanspraakBijzonderPartnerPensioen:
       type: object
       properties:
         maandelijkse_bpp_opbouw_voor:
