--- a/ps_spec.yaml
+++ b/ps_spec.yaml
@@ -472,11 +472,19 @@ paths:
              example: scheidingBerekening
           description: Describes the data scope that is requested within all entitlement data of a participant. MUST be one of the pre-defined scopes within the pensionservices scheme.
         - in: body
-          name: scheidingBerekeningVerzoek
+          name: serverConsentId
+          required: true
+          schema:          
+             type: string
+             $ref: '#/components/schemas/serverConsentId'
+          description: Reference to the relevant consent resource that is registered server-side
+        - in: body
+          name: scheidingBerekeningParameters
           required: true
           schema:          
              type: object
-             $ref: '#/components/schemas/scheidingBerekeningVerzoek'
+             $ref: '#/components/schemas/scheidingBerekeningParameters'
+          description: Contains the input parameters the datasource needs to include for making calculations
       responses:
         '200':
           description: OK - Successful request
@@ -939,13 +947,7 @@ components:
           description: birthdate of the user's partner
           example: 1987-08-25
         
-    scheidingBerekeningVerzoek:
-      type: object
-      properties:
-        scheidingBerekeningParameters:
-            $ref: '#/components/schemas/scheidingBerekeningParameters'
-        serverConsentId:
-            $ref: '#/components/schemas/serverConsentId'
+
     scheidingBerekeningParameters:
       type: object
       properties:
