--- a/ps_spec.yaml
+++ b/ps_spec.yaml
@@ -247,10 +247,10 @@ paths:
                     type: string
                     description: The server's error response
                     example: Client is not authorized to access requested resource
-  /pensionservices-scheme/v1.0/consents/{server-consent-id}:
+  /pensionservices-scheme/v1.0/consents/{serverConsentId}:
     patch:
       summary: Update consent
-      description: Send updated data to previously created consent at the server. Only requires the client to send values for attributes in the consentRegistration that are changed. Primarily used for revoking consent status or renewing the validity period. Request and response (2xx) MUST be signed using X-Timestamp and X-Signature headers.
+      description: Send updated data to previously created consent at the server. Only requires the client to send values for attributes in the consentRegistration that are changed. Primarily used for renewing the validity period. Request and response (2xx) MUST be signed using X-Timestamp and X-Signature headers.
       parameters:
         - in: path
           name: serverConsentId
@@ -343,7 +343,85 @@ paths:
                     type: string
                     description: The server's error response
                     example: Client is not authorized to access requested resource
- 
+    delete:
+      summary: Delete consent
+      description: Delete the specified consent resource from the server. Requires the client to send the serverConsentId to identify the consent resource to be deleted. The request MUST be signed using X-Timestamp and X-Signature headers.
+      parameters:
+        - in: path
+          name: serverConsentId
+          required: true
+          description: contains the consent resource reference ID that is obtained through the server response when creating a new consent resource
+          schema: 
+            type: string
+        - in: header
+          name: X-Timestamp
+          schema:
+            type: string
+            format: int64
+          example: 1717106234
+          required: true
+          description: timestamp - current time in Unix epoch format
+        - in: header
+          name: X-Signature
+          schema:
+            type: string    
+          example: RXhhbXBsZVJlc3BvbnNlU2lnbmF0dXJl
+          required: true
+          description: Base64 encoded request signature. Created by signing the signature base string (combining HTTP method, URL, and X-Timestamp header values) using RS256 algorithm, with private key of the client.
+        - in: header
+          name: Authorization
+          schema:
+            type: string
+          example: Bearer 6c18c234b1b18b1d97c7043e2e41135c293d0da9
+          required: true
+          description: Bearer JWT Access Token - acquired through the token endpoint
+      responses:
+        '204':
+           description: No Content - Consent successfully deleted
+        '400':
+          description: Bad request 
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error_response:
+                    type: string
+                    description: The server's error response
+                    example: Request is missing required parameters or not properly formatted
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error_response:
+                    type: string
+                    description: The server's error response
+                    example: Bearer token invalid
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error_response:
+                    type: string
+                    description: The server's error response
+                    example: Client is not authorized to access requested resource
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error_response:
+                    type: string
+                    description: The server's error response
+                    example: The requested consent resource does not exist
   /pensionservices-scheme/v1.0/participants/userinfo:
     post:
       summary: Retrieve participant personal data
